--- a/views/game.html
+++ b/views/game.html
@@ -1,28 +1,87 @@
-<h1>Count: {{game.count}}</h1>
-<h1>Players</h1>
-<ul>
-    <li ng-repeat="player in game.players">{{player.properties.name}} - {{player.active}}
-        <ul>
-            <li ng-repeat="card in player.hand">{{translateCardAction(card.action)}} - {{card.values}}</li>
-        </ul>
-    </li>
-</ul>
-<h1>Current Player #{{game.currentPlayerIndex}}: {{game.getCurrentPlayer().properties.name}}</h1>
-<ul ng-show="game.getCurrentPlayer().properties.player == null">
-    <li ng-repeat="card in game.players[game.currentPlayerIndex].hand track by $index">{{translateCardAction(card.action)}}
-        <ul>
-            <li ng-repeat="value in card.values track by $index"><button ng-click="playCard($parent.$index, $index)">{{value}}</button></li>
-        </ul>
-    </li>
-</ul>
-<p ng-show="game.getCurrentPlayer().properties.player != null">
-    <button ng-click="performNextMove()">{{nextMove}}</button>
-</p>
-<h1>Stock</h1>
-<ol>
-    <li ng-repeat="card in game.deck.stock">{{translateCardAction(card.action)}} - {{card.values}}</li>
-</ol>
-<h1>Discard Pile</h1>
-<ol>
-    <li ng-repeat="card in game.deck.discardPile">{{translateCardAction(card.action)}} - {{card.values}}</li>
-</ol>
+<div class="row">
+    <div class="col-xs-{{12 / cpuPlayerCount}}" ng-repeat="player in game.players | filter:isHuman">
+        <div class="panel panel-default" ng-class="{'panel-primary': game.getCurrentPlayer() == player}">
+            <div class="panel-heading">
+                <i class="fa fa-{{player.properties.icon}}"></i> {{player.properties.name}}
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-xs-offset-3 col-xs-3">
+        <div class="card text-center" ng-bind-html="translateCard(game.lastCard)"></div>
+    </div>
+    <div class="col-xs-3">{{game.deck.length == 0 ? 'Empty': 'Next Card'}}</div>
+</div>
+
+<div class="text-center">
+    Count: {{game.count}}
+</div>
+
+<div class="panel panel-default" ng-class="{'panel-primary': game.getCurrentPlayer() == getHumanPlayer()}">
+    <div class="panel-heading">
+        <i class="fa fa-{{getHumanPlayer().properties.icon}}"></i> {{getHumanPlayer().properties.name}}
+    </div>
+    <div class="panel-body">
+        <div class="row">
+            <div class="col-xs-4" ng-repeat="card in getHumanPlayer().hand">
+                <div class="col-xs-12 panel panel-default" ng-if="card.values.length == 1">
+                    <div class="panel-body">
+                        <button type="button" class="btn btn-default btn-lg btn-block" ng-click="playCard($parent.$index, 0)"
+                            ng-disabled="!game.canPlay(card, 0) || getHumanPlayer() != game.getCurrentPlayer()" ng-bind-html="translateCard(card)"></button>
+                    </div>
+                </div>
+
+                <div class="col-xs-12 panel panel-default row" ng-if="card.values.length > 1">
+                    <div class="panel-body">
+                        <div class="col-xs-{{12 / card.values.length}}" ng-repeat="value in card.values track by $index">
+                            <button type="button" class="btn btn-default btn-lg btn-block"
+                                ng-disabled="!game.canPlay(card, $index) || getHumanPlayer() != game.getCurrentPlayer()" ng-click="playCard($parent.$index, $index)">{{value}}</button>
+                        </div>
+                    </div>
+                </div>
+
+
+                <!--<ul>-->
+                <!--    <li ng-repeat="value in card.values track by $index">-->
+                <!--        <button ng-click="playCard($parent.$index, $index)">{{value}}</button>-->
+                <!--    </li>-->
+                <!--</ul>-->
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+<!--<h1>Count: {{game.count}}</h1>-->
+<!--<h1>Players</h1>-->
+<!--<ul>-->
+<!--    <li ng-repeat="player in game.players">{{player.properties.name}} - {{player.active}}-->
+<!--        <ul>-->
+<!--            <li ng-repeat="card in player.hand">{{translateCardAction(card.action)}} - {{card.values}}</li>-->
+<!--        </ul>-->
+<!--    </li>-->
+<!--</ul>-->
+<!--<h1>Current Player #{{game.currentPlayerIndex}}: {{game.getCurrentPlayer().properties.name}}</h1>-->
+<!--<ul ng-show="game.getCurrentPlayer().properties.player == null">-->
+<!--    <li ng-repeat="card in game.players[game.currentPlayerIndex].hand track by $index">{{translateCardAction(card.action)}}-->
+<!--        <ul>-->
+<!--            <li ng-repeat="value in card.values track by $index">-->
+<!--                <button ng-click="playCard($parent.$index, $index)">{{value}}</button>-->
+<!--            </li>-->
+<!--        </ul>-->
+<!--    </li>-->
+<!--</ul>-->
+<!--<p ng-show="game.getCurrentPlayer().properties.player != null">-->
+<!--    <button ng-click="performNextMove()">{{nextMove}}</button>-->
+<!--</p>-->
+<!--<h1>Stock</h1>-->
+<!--<ol>-->
+<!--    <li ng-repeat="card in game.deck.stock">{{translateCardAction(card.action)}} - {{card.values}}</li>-->
+<!--</ol>-->
+<!--<h1>Discard Pile</h1>-->
+<!--<ol>-->
+<!--    <li ng-repeat="card in game.deck.discardPile">{{translateCardAction(card.action)}} - {{card.values}}</li>-->
+<!--</ol>-->
