--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,48 @@
+html, body, .container {
+    height: 100%;
+}
+
+.background-game {
+    background-color: #004700;
+    background-image: images/felt.jpg;
+}
+
+.count {
+    color: white;
+}
+
+.card-button {
+    border: 1px solid black;
+    border-radius: 5px;
+    text-align: center;
+    font-size: 2em;
+    font-weight: bold;
+    background: linear-gradient(to bottom, white, snow);
+    cursor: pointer;
+}
+
 .card {
     border: 1px solid black;
     border-radius: 5px;
-    padding: 2em;
     text-align: center;
+    font-size: 2em;
+    font-weight: bold;
+    padding-top: 5em;
+    padding-bottom: 5em;
+    background: linear-gradient(to bottom, white, snow);
+}
+.player-out {
+    text-decoration: line-through;
+}
+
+/* Modified from http://lea.verou.me/css3patterns/#marrakesh */
+.card-back {
+    background-color: white;
+    background-image: radial-gradient(midnightblue 3px, transparent 3px), repeating-radial-gradient(midnightblue 0, midnightblue 1px, transparent 2px, transparent 5px, midnightblue 7px, midnightblue 8px, transparent 8px, transparent 17px);
+    background-size: 10px 10px, 30px 30px;
+    background-position: 0 0;
+}
+
+.game {
+    padding: 2em 0em;
 }
