--- a/views/game.html
+++ b/views/game.html
@@ -1,43 +1,46 @@
-<div class="row">
-    <div class="col-xs-{{12 / cpuPlayerCount}}" ng-repeat="player in game.players | filter:isHuman">
-        <div class="panel panel-default" ng-class="{'panel-primary': game.getCurrentPlayer() == player}">
-            <div class="panel-heading">
-                <i class="fa fa-{{player.properties.icon}}"></i> {{player.properties.name}}
+<div class="game">
+    <div class="row">
+        <div class="col-xs-{{12 / cpuPlayerCount}}" ng-repeat="player in game.players | filter:isHuman">
+            <div class="panel panel-default" ng-class="{'panel-primary': game.getCurrentPlayer() == player}">
+                <div class="panel-heading text-center">
+                    <h4 ng-class="{'player-out': !player.active}"><i class="fa fa-{{player.properties.icon}}"></i><br />{{player.properties.name}}</h4>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
-<div class="row">
-    <div class="col-xs-offset-3 col-xs-3">
-        <div class="card" ng-bind-html="translateCard(game.lastCard)"></div>
+    <div class="row">
+        <div class="col-xs-offset-3 col-xs-3">
+            <div ng-hide="game.lastCard == null" class="card" ng-bind-html="translateCard(game.lastCard)"></div>
+        </div>
+        <div class="col-xs-3 card card-back" ng-show="game.deck.stockRemaining()">
+            &nbsp;
+        </div>
     </div>
-    <div class="col-xs-3">{{game.deck.length == 0 ? 'Empty': 'Next Card'}}</div>
-</div>
 
-<div class="text-center">
-    Count: {{game.count}}
-</div>
+    <h1 class="text-center count">
+        Count: {{game.count}}
+    </h1>
 
-<div class="panel panel-default" ng-class="{'panel-primary': game.getCurrentPlayer() == getHumanPlayer()}">
-    <div class="panel-heading">
-        <i class="fa fa-{{getHumanPlayer().properties.icon}}"></i> {{getHumanPlayer().properties.name}}
-    </div>
-    <div class="panel-body">
-        <div class="row">
-            <div class="col-xs-4" ng-repeat="card in getHumanPlayer().hand">
-                <div class="col-xs-12 panel panel-default" ng-if="card.values.length == 1">
-                    <div class="panel-body">
-                        <button type="button" class="btn btn-default btn-lg btn-block" ng-click="playCard($parent.$index, 0)"
-                            ng-disabled="!game.canPlay(card, 0) || getHumanPlayer() != game.getCurrentPlayer()" ng-bind-html="translateCard(card)"></button>
+    <div class="panel panel-default" ng-class="{'panel-primary': game.getCurrentPlayer() == getHumanPlayer()}">
+        <div class="panel-heading">
+            <h3 ng-class="{'player-out': !getHumanPlayer().active}"><i class="fa fa-{{getHumanPlayer().properties.icon}}"></i> {{getHumanPlayer().properties.name}}</h3>
+        </div>
+        <div class="panel-body">
+            <button ng-if="!getHumanPlayer().active" class="btn btn-lg btn-default btn-block" ng-click="finishGame()">Finish Game</button>
+            <div class="row">
+                <div class="col-xs-4" ng-repeat="card in getHumanPlayer().hand">
+                    <div class="col-xs-12 panel panel-default" ng-if="card.values.length == 1">
+                        <div class="panel-body">
+                            <button type="button" class="btn btn-default btn-lg btn-block" ng-click="playCard($parent.$index, 0)" ng-disabled="!game.canPlay(card, 0) || getHumanPlayer() != game.getCurrentPlayer()" ng-bind-html="translateCard(card)"></button>
+                        </div>
                     </div>
-                </div>
 
-                <div class="col-xs-12 panel panel-default row" ng-if="card.values.length > 1">
-                    <div class="panel-body">
-                        <div class="col-xs-{{12 / card.values.length}}" ng-repeat="value in card.values track by $index">
-                            <button type="button" class="btn btn-default btn-lg btn-block"
-                                ng-disabled="!game.canPlay(card, $index) || getHumanPlayer() != game.getCurrentPlayer()" ng-click="playCard($parent.$index, $index)">{{value}}</button>
+                    <div class="col-xs-12 panel panel-default" ng-if="card.values.length > 1">
+                        <div class="panel-body row">
+                            <div class="col-xs-{{12 / card.values.length}}" ng-repeat="value in card.values track by $index">
+                                <button type="button" class="btn btn-default btn-lg btn-block" ng-disabled="!game.canPlay(card, $index) || getHumanPlayer() != game.getCurrentPlayer()" ng-click="playCard($parent.$index, $index)">{{value}}</button>
+                            </div>
                         </div>
                     </div>
                 </div>
