--- a/views/newgame.html
+++ b/views/newgame.html
@@ -2,28 +2,27 @@
     <h3 class="modal-title">New Game</h3>
 </div>
 <div class="modal-body">
-    <form ng-submit="ok()">
-        <div class="form-group">
-            <label for="name">Your Name:</label>
-            <input type="text" class="form-control" id="name" placeholder="Enter your name" ng-model="name" ng-required="true">
+    <div class="form-group" ng-class="{'has-error': nameError}">
+        <label class="control-label" for="name">Your Name:</label>
+        <input ng-model="name" type="text" class="form-control" id="name" placeholder="Enter your name">
+    </div>
+    <div class="alert alert-danger" role="alert" ng-show="nameError">Please enter your name</div>
+    <div class="form-group">
+        <label class="control-label">Your Icon:</label>
+        <div class="btn-group">
+            <label class="btn btn-lg btn-default" ng-model="$parent.selectedIcon" ng-repeat="icon in icons" btn-radio="icon">
+                <i class="fa fa-{{icon}}"></i>
+            </label>
         </div>
-        <div class="form-group">
-            <label>Your Icon:</label>
-            <div class="btn-group">
-                <label class="btn btn-lg btn-default" ng-model="$parent.selectedIcon" ng-repeat="icon in icons" btn-radio="icon">
-                    <i class="fa fa-{{icon}}"></i>
-                </label>
-            </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label">Number of CPU Players:</label>
+        <div class="btn-group">
+            <label class="btn btn-lg btn-default" ng-model="$parent.cpuPlayersCount" ng-repeat="players in cpuPlayers" btn-radio="players">
+                {{players}}
+            </label>
         </div>
-        <div class="form-group">
-            <label>Number of CPU Players:</label>
-            <div class="btn-group">
-                <label class="btn btn-lg btn-default" ng-model="$parent.cpuPlayersCount" ng-repeat="players in cpuPlayers" btn-radio="players">
-                    {{players}}
-                </label>
-            </div>
-        </div>
-    </form>
+    </div>
 </div>
 <div class="modal-footer">
     <button class="btn btn-primary" ng-click="ok()">OK</button>
