--- a/views/main.html
+++ b/views/main.html
@@ -2,4 +2,5 @@
   <h1>Ninety-Nine</h1>
 </div>
 
-<button type="button" class="btn btn-primary btn-lg btn-block" ng-click="newGame()">New Game</button>
+<button type="button" class="btn btn-primary btn-lg btn-block" ng-click="newGame()">New Game</button><br />
+<button type="button" class="btn btn-primary btn-lg btn-block" ng-click="viewInstructions()">Instructions</button>
