--- a/views/main.html
+++ b/views/main.html
@@ -4,3 +4,4 @@
 
 <button type="button" class="btn btn-primary btn-lg btn-block" ng-click="newGame()">New Game</button><br />
 <button type="button" class="btn btn-primary btn-lg btn-block" ng-click="viewInstructions()">Instructions</button>
+<button type="button" class="btn btn-primary btn-lg btn-block" ng-click="viewStats()">Stats and Unlockables</button>
