Nav bar in better place

--- a/views/main.html
+++ b/views/main.html
@@ -1,7 +1,7 @@
-<div class="page-header">
-  <h1>Ninety-Nine</h1>
+<div class="row">
+    <div class="col-md-offset-3 col-md-6 col-sm-offset-2 col-sm-8 col-xs-12">
+        <button type="button" class="btn btn-primary btn-lg btn-block" ng-click="newGame()">New Game</button>
+        <button type="button" class="btn btn-primary btn-lg btn-block" ng-click="viewInstructions()">Instructions</button>
+        <button type="button" class="btn btn-primary btn-lg btn-block" ng-click="viewStats()">Stats and Unlockables</button>
+    </div>
 </div>
-
-<button type="button" class="btn btn-primary btn-lg btn-block" ng-click="newGame()">New Game</button><br />
-<button type="button" class="btn btn-primary btn-lg btn-block" ng-click="viewInstructions()">Instructions</button>
-<button type="button" class="btn btn-primary btn-lg btn-block" ng-click="viewStats()">Stats and Unlockables</button>
