Created audio player directive

--- a/views/navBarDirective.html
+++ b/views/navBarDirective.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-fixed-top" ng-hide="hidden()">
+<nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" ng-show="optionsButtonFunc() != null" ng-click="optionsButtonFunc()()">
@@ -15,7 +15,5 @@
                 <li><a class="pointer" ng-click="optionsButtonFunc()()">{{optionsButtonText()}}</a></li>
             </ul>
         </div>
-        <!-- /.navbar-collapse -->
     </div>
-    <!-- /.container-fluid -->
 </nav>
