--- a/views/navBarDirective.html
+++ b/views/navBarDirective.html
@@ -6,7 +6,7 @@
             </button>
             <span class="navbar-brand" ng-class="{'pointer': backButtonFunc() != null}" ng-click="backButtonFunc()()">
                 <span class="pointer" ng-show="backButtonFunc() != null"><i class="fa fa-chevron-left"></i> </span>
-                🃏 {{title()}}
+                &#127183; {{title()}}
             </span>
         </div>
 
