--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,10 @@
 body {
-    padding-top: 70px;
     height: 100%;
     min-height: 100%;
+}
+
+.navbar-padding {
+    padding-top: 70px;
 }
 
 html,
