--- a/views/navBarDirective.html
+++ b/views/navBarDirective.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top" ng-show="visible()">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" ng-show="optionsButtonFunc() != null" ng-click="optionsButtonFunc()()">
