--- a/views/game.html
+++ b/views/game.html
@@ -24,8 +24,14 @@
     <footer class="footer" id="footer">
         <h2 class="text-center count">Count: {{game.count}}</h2>
         <div class="panel panel-default" ng-class="{'panel-warning': game.getCurrentPlayer() == getHumanPlayer()}">
-            <div class="panel-heading text-center">
-                <h4 ng-class="{'player-out': !getHumanPlayer().active}"><i class="fa {{getHumanPlayer().properties.icon}}"></i> {{getHumanPlayer().properties.name}}</h4>
+            <div class="panel-heading">
+                <div class="row">
+                    <div class="col-xs-10">
+                        <h4 ng-class="{'player-out': !getHumanPlayer().active}"><i class="fa {{getHumanPlayer().properties.icon}}"></i> {{getHumanPlayer().properties.name}}</h4></div>
+                    <div class="col-xs-2">
+                        <button type="button" class="btn btn-default btn-lg btn-block"><i class="fa fa-pause"></i></button>
+                    </div>
+                </div>
             </div>
             <div class="panel-body">
                 <button ng-if="!getHumanPlayer().active" class="btn btn-lg btn-default btn-block" ng-click="finishGame()">Finish Game</button>
