--- a/views/screens/game.html
+++ b/views/screens/game.html
@@ -35,21 +35,22 @@
             <div class="panel-body">
                 <button ng-if="!getHumanPlayer().active" class="btn btn-lg btn-default btn-block" ng-click="finishGame()">Finish Game</button>
                 <div class="row">
-                    <div class="col-sm-4" ng-repeat="card in getHumanPlayer().hand" ng-class="{'col-xs-6': $index !== 2, 'col-xs-12': $index === 2}">
-                        <div class="col-xs-12 panel panel-default" ng-if="card.values.length === 1">
-                            <div class="panel-body">
-                                <button type="button" class="btn btn-primary btn-lg btn-block" ng-click="playCard($parent.$index, 0)" ng-disabled="!game.canPlay(card, 0) || getHumanPlayer() != game.getCurrentPlayer()" ng-bind-html="translateCard(card)"></button>
-                            </div>
+                    <div class="col-xs-4" ng-repeat="card in getHumanPlayer().hand">
+                        <div ng-if="card.values.length === 1">
+                            <button type="button" class="btn btn-primary btn-lg btn-block" ng-click="playCard($parent.$index, 0)" ng-disabled="!game.canPlay(card, 0) || getHumanPlayer() != game.getCurrentPlayer()" ng-bind-html="translateCard(card)"></button>
                         </div>
-
-                        <div class="col-xs-12 panel panel-default" ng-if="card.values.length > 1">
-                            <div class="panel-body row">
-                                <div class="col-xs-{{12 / card.values.length}}" ng-repeat="value in card.values track by $index">
-                                    <button type="button" class="btn btn-primary btn-lg btn-block" ng-disabled="!game.canPlay(card, $index) || getHumanPlayer() != game.getCurrentPlayer()" ng-click="playCard($parent.$index, $index)">{{value}}</button>
-                                </div>
-                            </div>
+                        <div ng-if="card.values.length !== 1">
+                            <button type="button" popover-template="'multipleCards.html'" popover-trigger="focus" class="btn btn-primary btn-lg btn-block" ng-disabled="!game.canPlayAny(card) || getHumanPlayer() != game.getCurrentPlayer()" ng-bind-html="translateCard(card)"></button>
                         </div>
                     </div>
+
+                    <script type="text/ng-template" id="multipleCards.html">
+                        <div class="row">
+                            <div class="col-xs-{{12 / card.values.length}}" ng-repeat="choice in card.values track by $index">
+                                <button type="button" class="btn btn-primary btn-lg btn-block" ng-disabled="!game.canPlay(card, $index) || getHumanPlayer() != game.getCurrentPlayer()" ng-click="playCard($parent.$index, $index)">{{choice}}</button>
+                            </div>
+                        </div>
+                    </script>
                 </div>
             </div>
         </div>
