--- a/views/screens/game.html
+++ b/views/screens/game.html
@@ -28,7 +28,7 @@
                     <div class="col-xs-10">
                         <h4 ng-class="{'player-out': !getHumanPlayer().active}"><i class="fa {{getHumanPlayer().properties.icon}}"></i> {{getHumanPlayer().properties.name}}</h4></div>
                     <div class="col-xs-2">
-                        <button type="button" class="btn btn-default btn-lg btn-block"><i class="fa fa-pause"></i></button>
+                        <button type="button" class="btn btn-default btn-lg btn-block" ng-click="pause()"><i class="fa fa-pause"></i></button>
                     </div>
                 </div>
             </div>
