Autofocus on name field when creating a new game

--- a/views/modals/newgame.html
+++ b/views/modals/newgame.html
@@ -4,7 +4,7 @@
 <div class="modal-body">
     <div class="form-group" ng-class="{'has-error': nameError}">
         <label class="control-label" for="name">Your Name:</label>
-        <input ng-model="name" type="text" class="form-control" id="name" placeholder="Enter your name">
+        <input ng-model="name" type="text" class="form-control" id="name" placeholder="Enter your name" autofocus>
     </div>
     <div class="alert alert-danger" role="alert" ng-show="nameError">Please enter your name</div>
     <div class="form-group">
