--- a/views/screens/game.html
+++ b/views/screens/game.html
@@ -9,9 +9,17 @@
 
     <div class="row">
         <div class="col-sm-offset-3 col-sm-3 col-xs-6">
-            <div ng-hide="game.lastCard == null" class="card" ng-bind-html="translateCard(game.lastCard).full" ng-style="{'height': cardHeight}"></div>
+            <div ng-hide="game.lastCard == null" class="card" style="display: table; overflow: hidden;" ng-style="{'height': cardHeight}">
+                <div style="display: table-cell; vertical-align: middle;">
+                    <div>
+                        <span ng-bind-html="translateCard(game.lastCard).played"></span>
+                    </div>
+                </div>
+            </div>
+
+            <!--<div ng-hide="game.lastCard == null" class="card" ng-bind-html="translateCard(game.lastCard).played" ng-style="{'height': cardHeight}"></div>-->
         </div>
-        <div class="col-sm-3 col-xs-6 ">
+        <div class="col-sm-3 col-xs-6">
             <div class="card card-back" ng-show="game.deck.stockRemaining()" ng-style="{height: cardHeight}">
                 &nbsp;
             </div>
