Played card and deck repositioning in progress

--- a/styles/main.css
+++ b/styles/main.css
@@ -42,6 +42,7 @@ html,
     font-size: 2em;
     font-weight: bold;
     background: linear-gradient(to bottom, white, snow);
+    position: absolute;
 }
 
 .player-card {
