--- a/views/screens/game.html
+++ b/views/screens/game.html
@@ -7,24 +7,22 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-sm-offset-3 col-sm-3 col-xs-6">
-            <div ng-hide="game.lastCard == null" class="card" style="display: table; overflow: hidden;" ng-style="{'height': cardHeight}">
-                <div style="display: table-cell; vertical-align: middle;">
-                    <div>
-                        <span ng-bind-html="translateCard(game.lastCard).played"></span>
-                    </div>
-                </div>
-            </div>
 
-            <!--<div ng-hide="game.lastCard == null" class="card" ng-bind-html="translateCard(game.lastCard).played" ng-style="{'height': cardHeight}"></div>-->
-        </div>
-        <div class="col-sm-3 col-xs-6">
-            <div class="card card-back" ng-show="game.deck.stockRemaining()" ng-style="{height: cardHeight}">
-                &nbsp;
+    <div ng-hide="game.lastCard == null" class="card" style="display: table; overflow: hidden;" ng-style="{'height': cardHeight, 'width': cardWidth, 'margin-top': cardMargin, 'margin-bottom': cardMargin, 'right': cardPosition}">
+        <div style="display: table-cell; vertical-align: middle;">
+            <div>
+                <span ng-bind-html="translateCard(game.lastCard).played"></span>
             </div>
         </div>
     </div>
+
+    <!--<div ng-hide="game.lastCard == null" class="card" ng-bind-html="translateCard(game.lastCard).played" ng-style="{'height': cardHeight}"></div>-->
+
+
+    <div class="card card-back" ng-show="game.deck.stockRemaining()" ng-style="{'height': cardHeight, 'width': cardWidth, 'margin-top': cardMargin, 'margin-bottom': cardMargin, 'left': cardPosition}">
+        &nbsp;
+    </div>
+
 
     <footer class="footer" id="footer">
         <h2 class="text-center count">Count: {{game.count}}</h2>
@@ -32,7 +30,8 @@
             <div class="panel-heading">
                 <div class="row">
                     <div class="col-xs-9 col-sm-10">
-                        <h4 ng-class="{'player-out': !getHumanPlayer().active}"><i class="fa {{getHumanPlayer().properties.icon}}"></i> {{getHumanPlayer().properties.name}}</h4></div>
+                        <h4 ng-class="{'player-out': !getHumanPlayer().active}"><i class="fa {{getHumanPlayer().properties.icon}}"></i> {{getHumanPlayer().properties.name}}</h4>
+                    </div>
                     <div class="col-xs-3 col-sm-2">
                         <button type="button" class="btn btn-default btn-lg btn-block" ng-click="pause()"><i class="fa fa-pause"></i></button>
                     </div>
