Deck and played cards now center correctly on the screen

--- a/views/screens/game.html
+++ b/views/screens/game.html
@@ -8,7 +8,7 @@
     </div>
 
 
-    <div ng-hide="game.lastCard == null" class="card" style="display: table; overflow: hidden;" ng-style="{'height': cardHeight, 'width': cardWidth, 'margin-top': cardMargin, 'margin-bottom': cardMargin, 'right': cardPosition}">
+    <div ng-hide="game.lastCard == null" class="card" style="display: table; overflow: hidden;" ng-style="{'height': cardHeight, 'width': cardWidth, 'margin-top': verticalMargin, 'margin-bottom': verticalMargin, 'right': cardPosition}">
         <div style="display: table-cell; vertical-align: middle;">
             <div>
                 <span ng-bind-html="translateCard(game.lastCard).played"></span>
@@ -19,7 +19,7 @@
     <!--<div ng-hide="game.lastCard == null" class="card" ng-bind-html="translateCard(game.lastCard).played" ng-style="{'height': cardHeight}"></div>-->
 
 
-    <div class="card card-back" ng-show="game.deck.stockRemaining()" ng-style="{'height': cardHeight, 'width': cardWidth, 'margin-top': cardMargin, 'margin-bottom': cardMargin, 'left': cardPosition}">
+    <div class="card card-back" ng-show="game.deck.stockRemaining()" ng-style="{'height': cardHeight, 'width': cardWidth, 'margin-top': verticalMargin, 'margin-bottom': verticalMargin, 'left': cardPosition}">
         &nbsp;
     </div>
 
