--- a/views/screens/game.html
+++ b/views/screens/game.html
@@ -42,10 +42,10 @@
                 <div class="row">
                     <div class="col-xs-4" ng-repeat="card in getHumanPlayer().hand track by $index">
                         <div ng-if="card.values.length === 1">
-                            <button type="button" class="btn btn-primary btn-lg btn-block" ng-click="playCard($parent.$index, 0)" ng-disabled="!game.canPlay(card, 0) || getHumanPlayer() != game.getCurrentPlayer()" ng-bind-html="translateCard(card).mini"></button>
+                            <button type="button" class="btn btn-primary btn-lg btn-block" ng-click="playCard($parent.$index, 0)" ng-disabled="!game.canPlay(card, 0) || getHumanPlayer() != game.getCurrentPlayer()"><span class="visible-xs-inline" ng-bind-html="translateCard(card).mini"></span><span class="hidden-xs" ng-bind-html="translateCard(card).full"></span></button>
                         </div>
                         <div ng-if="card.values.length !== 1">
-                            <button type="button" popover-append-to-body="true" popover-template="'multipleCards.html'" popover-trigger="focus" class="btn btn-primary btn-lg btn-block" ng-disabled="!game.canPlayAny(card) || getHumanPlayer() != game.getCurrentPlayer()" ng-bind-html="translateCard(card).mini"></button>
+                            <button type="button" popover-append-to-body="true" popover-template="'multipleCards.html'" popover-trigger="focus" class="btn btn-primary btn-lg btn-block" ng-disabled="!game.canPlayAny(card) || getHumanPlayer() != game.getCurrentPlayer()"><span class="visible-xs-inline" ng-bind-html="translateCard(card).mini"></span><span class="hidden-xs" ng-bind-html="translateCard(card).full"></span></button>
                         </div>
                     </div>
 
