Should work with new game screen now

--- a/views/modals/playerWonModal.html
+++ b/views/modals/playerWonModal.html
@@ -10,5 +10,6 @@
     </div>
 </div>
 <div class="modal-footer">
-    <button class="btn btn-primary btn-lg" ng-click="ok()">OK</button>
+    <button class="btn btn-success btn-lg" ng-click="newgame()">New Game</button>
+    <button class="btn btn-primary btn-lg" ng-click="mainmenu()">Main Menu</button>
 </div>
