--- a/views/screens/instructions.html
+++ b/views/screens/instructions.html
@@ -1,5 +1,35 @@
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer et ligula urna. Cras sed erat non leo ultricies euismod vel sed urna. Suspendisse mollis, ex eu tincidunt commodo, nisi neque varius magna, imperdiet faucibus nibh libero vitae libero. Nunc imperdiet orci a sem condimentum, sed mattis mi iaculis. Sed finibus auctor nisi in dapibus. In hac habitasse platea dictumst. Donec faucibus neque et erat porttitor dapibus.</p>
-<p>Vivamus vulputate sagittis ex, non cursus nulla. Phasellus auctor facilisis molestie. Quisque tortor mauris, auctor sed leo id, elementum vestibulum orci. Sed sodales sollicitudin metus, sed feugiat augue. Vestibulum justo nisl, varius tempor iaculis et, consequat a metus. Duis luctus, velit non ultrices ullamcorper, urna elit volutpat neque, quis molestie diam ipsum sit amet lacus. Duis sit amet massa turpis. Proin eget felis finibus enim venenatis rhoncus nec vitae neque. Sed hendrerit tellus in orci mollis tincidunt. Phasellus at pellentesque odio. Pellentesque consectetur semper placerat. Nulla facilisi. Curabitur a metus vehicula, mattis leo non, semper velit.</p>
-<p>Nulla nisl felis, luctus nec leo vitae, pharetra sodales eros. Suspendisse potenti. Quisque tempus eros eros, eu vehicula felis pellentesque et. Aenean consequat, sapien vel dictum semper, mauris lectus efficitur dui, ac aliquet sem nisi at orci. Pellentesque et auctor lorem, a mattis erat. Vestibulum bibendum, est vel scelerisque dapibus, lacus felis elementum felis, in gravida ex orci sit amet dui. Vestibulum eu aliquam velit.</p>
-<p>Phasellus porttitor tellus vel lacinia ultricies. Aenean ac est tincidunt, hendrerit erat quis, bibendum quam. Cras interdum tempus dui, eget pulvinar sem. Proin sed urna sed felis suscipit sodales nec quis orci. Quisque a sem sodales, tincidunt mauris sed, accumsan lectus. Mauris hendrerit diam sed vehicula ultrices. In sit amet viverra nunc, vitae sodales tellus. Curabitur eget velit posuere, imperdiet lectus quis, fringilla risus. Mauris at libero ornare, finibus eros vulputate, ultricies mi. Aliquam sed libero ipsum.</p>
-<p>In efficitur arcu quis nisl imperdiet commodo. Vivamus maximus eros vitae nunc blandit, in gravida arcu dignissim. Nullam vitae ultrices lacus. Quisque convallis in dolor quis vulputate. Morbi vulputate aliquet purus. Vestibulum ac justo non mauris scelerisque vestibulum. Sed lorem ex, lobortis id pulvinar vel, euismod sit amet nisl. Suspendisse tincidunt ultrices volutpat. Pellentesque aliquet est a posuere feugiat. In vel egestas lectus. Duis sollicitudin sagittis diam, sed faucibus elit faucibus vitae. Sed vel libero sit amet felis vulputate facilisis a eu enim. Fusce in gravida elit. Mauris lacinia nec enim a ornare.</p>
+<h3>Overview</h3>
+<p>Ninety-Nine is played with two to five players and a standard 52 card deck.  (In this version of Ninety-Nine, only the values and effects each card has are displayed in order to simplify the game.)  Each player is randomly dealt three cards.  Players alternate playing cards, adding or subtracting from the Count.</p>
+<p>At no point can the Count exceed 99 nor can it fall below 0.  Players who cannot play a card that would not result in the Count exceeding 99 are eliminated.  The last player remaining is the winner.</p>
+<h3>Playing the Game</h3>
+<p>At the bottom of the screen are your three cards.  If the card can be played, it will be bright blue.  If it cannot be played, it will be a light blue.  Tap on the card you wish to play.  It will be placed on the game board, its value will be added to the count, and its effect will be applied.  A new card is automatically drawn for you, and play continues clockwise to the next player (unless the order has been reversed).</p>
+<p>If a card can be played in one of many ways, a pop-up will appear near the card.  Tap the way you wish to play.  Tapping anywhere else on the screen will dismiss the pop-up, allowing you to select a different card.</p>
+<p>CPU players will automatically play a card after a slight delay.  They will draw another card and play continues clockwise to the next player (unless the order has been reversed).</p>
+<p>During the game, if the deck is exhausted, the played cards will be reshuffled.  Cards will continue to be drawn from this reshuffled deck.</p>
+<h3>Types of Cards</h3>
+<dl>
+    <dt>+1, +2, +5, +6, +7, +8</dt>
+    <dd>When played, these cards add their face value to the count.  Play continues with the next player.</dd>
+</dl>
+<dl>
+    <dt>+/-10</dt>
+    <dd>When played, the player can either add 10 (+10) or subtract 10 (-10) from the count.  Play continues with the next player.</dd>
+</dl>
+<dl>
+    <dt><i class="fa fa-long-arrow-right"></i> Pass</dt>
+    <dd>When played, the count remains the same and play continues to the next player.</dd>
+</dl>
+<dl>
+    <dt>+3, <i class="fa fa-share"></i> Skip</dt>
+    <dd>When played, three is added to the count (+3) and the next player loses his or her turn.  Play continues with the next player.</dd>
+</dl>
+<dl>
+    <dt><i class="fa fa-retweet"></i> Reverse</dt>
+    <dd>When played, the count remains the same and the order of play is reversed.  Play continues with the player who previously went.</dd>
+</dl>
+<dl>
+    <dt>99</dt>
+    <dd>When played, the count is set to 99, even if it is already 99.  Play continues with the next player.</dd>
+</dl>
+<h3>Winning the Game</h3>
+<p>If a player cannot play a card that will not result in the count going above 99, he or she is eliminated from the game.  The final player remaining is the winner of the game.</p>
